# log

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  test.cpp
src/: consoleappender.cpp  consoleappender.h  fileappender.cpp  fileappender.h  log.cpp  log.h  logappender.cpp  logappender.h  logcollector.cpp  logcollector.h  logger.cpp  logger.h  logmessage.cpp  logmessage.h
